--- a/src/renderer/src/components/ExperimentCarousel/Carousel.module.scss
+++ b/src/renderer/src/components/ExperimentCarousel/Carousel.module.scss
@@ -1,3 +1,12 @@
+.carouselContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
 .carousel {
 	display: flex;
 	flex-direction: row;
@@ -29,7 +38,7 @@
 	}
 
 	&:disabled {
-		opacity: 0.5;
+		opacity: 0;
 		cursor: default;
 	}
 }
