--- a/src/renderer/src/components/Controls/Slider/Slider.module.scss
+++ b/src/renderer/src/components/Controls/Slider/Slider.module.scss
@@ -47,7 +47,7 @@
 	transform: translateY(-50%);
 	background-color: var(--bg-800);
 	border-radius: 0.25rem;
-	box-shadow: #0003 0 0 0.5rem 0;
+	box-shadow: #00000033 0 0 0.5rem 0;
 
 
 	&:nth-child(1) {
