add: disabled option to controls

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -1,6 +1,6 @@
 :root {
 	--color-primary: #fff;
-	--color-secondary: #dedede;
+	--color-secondary: #b7b7b7;
 	--color-link: #9feaf9;
 
 	--bg-blue-100: #b7cde7;
