--- a/src/renderer/src/components/ExperimentBase/ExperimentBase.module.scss
+++ b/src/renderer/src/components/ExperimentBase/ExperimentBase.module.scss
@@ -6,7 +6,6 @@
 	width: 100%;
 	height: 100%;
 	padding: 1rem;
-	gap: 2rem;
 }
 
 .hidden {
@@ -31,8 +30,15 @@
 	justify-content: flex-start;
 	padding: 2rem;
 	gap: 1rem;
-	flex-basis: 40%;
+	flex-basis: 30rem;
 	overflow-y: auto;
+	margin-right: 2rem;
+	transition: all 0.5s ease-in-out;
+
+	&.collapsed {
+		opacity: 0.1;
+		margin-left: -32rem;
+	}
 
 	.helpButton {
 		position: absolute;
@@ -47,6 +53,20 @@
 }
 
 .output {
+	.collapseButton {
+		position: absolute;
+		z-index: 2;
+		top: 0;
+		left: 0;
+		cursor: pointer;
+		padding: 1rem;
+		background: var(--bg-800);
+		border-bottom-right-radius: 1rem;
+		border-top-left-radius: 1rem;
+		border-style: solid;
+		border-color: rgba(255, 255, 255, 0.563);
+	}
+	position: relative;
 	justify-content: center;
 }
 
