--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -33,7 +33,9 @@ body {
 	box-sizing: border-box;
 }
 
-*:focus, span.mq-focused, input:focus {
+*:focus,
+span.mq-focused,
+input:focus {
 	box-shadow: rgba(219, 219, 219, 0.496) 0 0 1px 2px, inset rgba(204, 221, 237, 0.762) 0 0 2px 0 !important;
 	border-color: #bbbbbb !important;
 	outline: unset;
