--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -18,12 +18,31 @@
 	--desmos-color-primary: #fff;
 }
 
+[data-theme='Light'] {
+	--color-primary: #000;
+	--color-secondary: #6b7280;
+	--color-link: #0076b0;
+
+	--bg-blue-100: #b7cde7;
+	--bg-50: #111827;
+	--bg-100: #1f2937;
+	--bg-200: #374151;
+	--bg-300: #4b5563;
+	--bg-400: #6b7280;
+	--bg-500: #9ca3af;
+	--bg-600: #d1d5db;
+	--bg-700: #e5e7eb;
+	--bg-800: #f3f4f6;
+	--bg-900: #f9fafb;
+
+	--desmos-color-primary: #000;
+}
+
 body {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
-	color: #fff;
 }
 
 * {
