--- a/src/renderer/src/components/Controls/ControlContainer/ControlContainer.module.scss
+++ b/src/renderer/src/components/Controls/ControlContainer/ControlContainer.module.scss
@@ -18,7 +18,7 @@
 	> select {
 		width: 100%;
 		padding: 0.5rem;
-		color: #fff;
+		color: var(--color-primary);
 		background-color: var(--bg-800);
 		background-clip: padding-box;
 		border: none;
