--- a/src/renderer/src/components/Nav/Nav.module.scss
+++ b/src/renderer/src/components/Nav/Nav.module.scss
@@ -5,6 +5,7 @@
 	height: 100%;
 	box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
 	background-color: var(--bg-900);
+	overflow: hidden;
 
 	ul {
 		display: column;
@@ -16,15 +17,28 @@
 		margin: 0;
 		padding: 0;
 		overflow-y: auto;
+		overflow-x: hidden;
 	}
 
-	li, .settings {
+	li,
+	.settings {
 		position: relative;
 		cursor: pointer;
-		padding: 2rem 1rem;
 		text-align: center;
 		transition: all 0.2s ease-in-out;
 		z-index: 1;
+
+		svg {
+			scale: 1.25;
+			padding: 1rem;
+			box-sizing: content-box;
+		}
+
+		.icon {
+			width: 3.5rem;
+			padding: 0.25rem;
+			box-sizing: content-box;
+		}
 
 		&:hover,
 		&.active {
