--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -2,6 +2,7 @@
 	--color-primary: #fff;
 	--color-secondary: #b7b7b7;
 	--color-link: #9feaf9;
+	--image-invert: invert(0);
 
 	--bg-blue-100: #b7cde7;
 	--bg-50: #f9fafb;
@@ -22,6 +23,7 @@
 	--color-primary: #000;
 	--color-secondary: #6b7280;
 	--color-link: #0076b0;
+	--image-invert: invert(1);
 
 	--bg-blue-100: #b7cde7;
 	--bg-50: #111827;
