enhance light mode color scheme

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -35,7 +35,7 @@
 	--bg-600: #d1d5db;
 	--bg-700: #e5e7eb;
 	--bg-800: #f3f4f6;
-	--bg-900: #f9fafb;
+	--bg-900: #eaeaea;
 
 	--desmos-color-primary: #000;
 }
