fix: nav boxshadow behaviour

--- a/src/renderer/src/components/Nav/Nav.module.scss
+++ b/src/renderer/src/components/Nav/Nav.module.scss
@@ -41,13 +41,17 @@
 			filter: var(--image-invert);
 		}
 
+		&::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			transition: all 0.2s ease-in-out;
+		}
+
 		&:hover,
 		&.active {
 			&::after {
-				content: '';
-				position: absolute;
-				top: 0;
-				left: 0;
 				height: 100%;
 				width: 100%;
 				color: var(--color-primary);
@@ -55,6 +59,10 @@
 				background-color: var(--bg-800);
 				box-shadow: rgba(0, 0, 0, 0.1215686275) 0 0 1rem 0;
 			}
+		}
+
+		&:hover {
+			z-index: 2;
 		}
 	}
 }
