add: numerical output to experiment

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -33,7 +33,7 @@
 	--bg-400: #6b7280;
 	--bg-500: #9ca3af;
 	--bg-600: #d1d5db;
-	--bg-700: #e5e7eb;
+	--bg-700: #b8b8b8;
 	--bg-800: #f3f4f6;
 	--bg-900: #eaeaea;
 
