add: fonts cosmetic

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -17,6 +17,7 @@
 	--bg-900: #111827;
 
 	--desmos-color-primary: #fff;
+
 }
 
 [data-theme='Light'] {
@@ -39,6 +40,48 @@
 
 	--desmos-color-primary: #000;
 }
+[data-font='Roboto'] {
+	font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Arial'] {
+	font-family: 'Arial', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Verdana'] {
+	font-family: 'Verdana', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Tahoma'] {
+	font-family: 'Tahoma', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Trebuchet MS'] {
+	font-family: 'Trebuchet MS', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Times New Roman'] {
+	font-family: 'Times New Roman', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Georgia'] {
+	font-family: 'Georgia', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Garamond'] {
+	font-family: 'Garamond', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Courier New'] {
+	font-family: 'Courier New', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+[data-font='Brush Script MT'] {
+	font-family: 'Brush Script MT', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+}
+
+
 
 body {
 	display: flex;
