--- a/src/renderer/src/components/Settings/Settings.module.scss
+++ b/src/renderer/src/components/Settings/Settings.module.scss
@@ -22,8 +22,8 @@
 	width: 100%;
 	height: 100%;
 	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	flex-direction: column;
 	gap: 3rem;
 }
