--- a/src/renderer/src/components/ExperimentBase/ExperimentBase.module.scss
+++ b/src/renderer/src/components/ExperimentBase/ExperimentBase.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-end;
 	width: 100%;
 	height: 100%;
 	padding: 1rem;
