fix(Dropdown): use selected font

--- a/src/renderer/src/components/Controls/ControlContainer/ControlContainer.module.scss
+++ b/src/renderer/src/components/Controls/ControlContainer/ControlContainer.module.scss
@@ -25,6 +25,7 @@
 		border-radius: 0.25rem;
 		transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 		box-shadow: #00000033 0 0 0.5rem 0;
+		font-family: inherit;
 	}
 
 	> select {
