--- a/src/renderer/src/components/Nav/Nav.module.scss
+++ b/src/renderer/src/components/Nav/Nav.module.scss
@@ -64,5 +64,29 @@
 		&:hover {
 			z-index: 2;
 		}
+
+		.closeBtn {
+			position: absolute;
+			top: 0;
+			right: 0;
+			opacity: 0;
+			width: 15px;
+			aspect-ratio: 1;
+			transition: all 0.5s ease-in-out;
+			z-index: 2;
+			padding: 0.15rem;
+			box-sizing: content-box;
+
+			.closeIcon {
+				width: 100%;
+				height: 100%;
+				scale: 1;
+				padding: 0;
+			}
+		}
+
+		&:hover > .closeBtn {
+			opacity: 0.75;
+		}
 	}
 }
