--- a/src/renderer/src/components/ColorContainer/color.scss
+++ b/src/renderer/src/components/ColorContainer/color.scss
@@ -40,6 +40,7 @@ button {
 	display: flex;
 	flex-direction: row;
 	gap: 23%;
+	align-self: center;
 }
 
 .color-selector-title{
@@ -57,6 +58,17 @@ button {
 	align-items: center;
 	justify-content: center;
 	display: flex;
+}
+
+.color-menu-button-active {
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 50%;
+	cursor: pointer;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	padding: 0.5rem;
 }
 
 .button:hover {
