--- a/src/renderer/src/components/ColorContainer/color.scss
+++ b/src/renderer/src/components/ColorContainer/color.scss
@@ -6,9 +6,6 @@ button {
 	color:  var(--bg-100);
 	cursor: pointer;
 	margin: 10px;
-	font-family: 'Inter', sans-serif;
-	font-size: 12px;
-	font-weight: 700;
 	height: 40px;
 	width: 350px;
 	align-items: center;
@@ -29,6 +26,7 @@ button {
 	padding: 15px;
 }
 
+
 .inner-color-container{
 	background-color: var(--bg-900);
 	border-radius: 8px;
@@ -47,7 +45,6 @@ button {
 	align-self: center;
 	justify-self: center;
 	text-align: center;
-	font-size: 20px;
 }
 
 .color-menu-button {
@@ -95,13 +92,7 @@ button {
 }
 
 .option-button-active{
-	text-align: left;
-	padding-top: 2px;
 	height: 90px;
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-	justify-content: center;
 	transition: all 0.3s ease-in-out;
 }
 
@@ -123,5 +114,14 @@ button {
 	grid-template-columns: repeat(7, 0.05fr);
 	gap: 1rem;
 	padding-bottom: 1rem;
+	animation: fade-in 0.8s;
 }
 
+@keyframes fade-in {
+	from{
+		opacity: 0;
+	}
+	to{
+		opacity: 1;
+	}
+}
