--- a/src/renderer/src/components/Dialog/Dialog.module.scss
+++ b/src/renderer/src/components/Dialog/Dialog.module.scss
@@ -22,6 +22,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	color: var(--color-primary);
 	background-color: var(--bg-800);
 	border-radius: 0.5rem;
 	padding: 2rem;
