--- a/src/renderer/src/components/ColorContainer/color.scss
+++ b/src/renderer/src/components/ColorContainer/color.scss
@@ -4,9 +4,10 @@ button {
 	border: var(--bg-800);
 	border-radius: 12px;
 	color:  var(--bg-100);
+	font-family: sans-serif !important;
 	cursor: pointer;
 	margin: 10px;
-	height: 40px;
+	height: 50px;
 	width: 350px;
 	align-items: center;
 	display: flex;
@@ -94,6 +95,10 @@ button {
 .option-button-active{
 	height: 90px;
 	transition: all 0.3s ease-in-out;
+}
+
+.option-button-X{
+	animation: fade-in 0.8s ease-in-out;
 }
 
 .color {
