--- a/src/renderer/src/components/Nav/Nav.module.scss
+++ b/src/renderer/src/components/Nav/Nav.module.scss
@@ -85,8 +85,32 @@
 			}
 		}
 
+
+
 		&:hover > .closeBtn {
 			opacity: 0.75;
 		}
+
 	}
+	.helpButton {
+		position: relative;
+		cursor: pointer;
+		text-align: center;
+		transition: all 0.2s ease-in-out;
+		z-index: 1;
+
+		svg {
+			scale: 1.25;
+			padding: 1rem;
+			box-sizing: content-box;
+		}
+
+		.icon {
+			width: 3.5rem;
+			padding: 0.25rem;
+			box-sizing: content-box;
+			filter: var(--image-invert);
+		}
+	}
+
 }
