--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -79,8 +79,8 @@
 body {
 	display: flex;
 	flex-direction: column;
-	font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Open Sans', sans-serif;
+	font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu',
+		'Cantarell', 'Open Sans', sans-serif;
 }
 
 * {
