--- a/src/renderer/src/components/Colors/Colors.module.scss
+++ b/src/renderer/src/components/Colors/Colors.module.scss
@@ -3,16 +3,23 @@
 	bottom: 0;
 	right: 0;
 	padding: 0.5rem;
-	border-radius: 1rem 0 0 0;
+	border-top-left-radius: 1rem;
 	background-color: var(--bg-800);
 	display: flex;
 	flex-direction: column;
+	border: 3px solid var(--bg-700);
+	border-bottom: none;
+	border-right: none;
+	cursor: pointer;
 }
 
 .colorSelectorTitle {
-	align-self: center;
-	justify-self: center;
-	text-align: center;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	padding: 0.5rem;
+	font-weight: 700;
 }
 
 .optionsContainer {
@@ -20,7 +27,22 @@
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
-	gap: 0.5rem;
+	gap: 0.25rem;
+}
+
+.closeButton {
+	position: absolute;
+	top: -1rem;
+	left: -1rem;
+	aspect-ratio: 1;
+	padding: 0.25rem;
+	cursor: pointer;
+	border-radius: 50%;
+	background-color: var(--bg-800);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 3px solid var(--bg-700);
 }
 
 .colorItem {
@@ -45,6 +67,11 @@
 	aspect-ratio: 1;
 	border-radius: 50%;
 	cursor: pointer;
+	border: 2px solid #fff;
+}
+
+[data-theme='Light'] .color {
+	filter: invert(1);
 }
 
 .palette {
@@ -55,7 +82,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
-	right: 0;
+	right: -0.5rem;
 	top: -600%;
 }
 
